projects/compiler/test/parser/array_error_no_comma.out
Error at %FILE_NAME%:1:4
Unexpected token 'int', expected one of ',', ']':
  |  [1 2]
        ^